--- a/render.yaml
+++ b/render.yaml
@@ -9,4 +9,4 @@ services:
       - key: PORT
         value: 5000
       - key: DATABASE_URL
-        value: postgresql://postgres:PASSWORD_PLACEHOLDER@db.kpkkftgiufzekytrxozk.supabase.co:5432/postgres
+        value: postgresql://postgres:DATABASE_URL@db.kpkkftgiufzekytrxozk.supabase.co:5432/postgres
